--- a/DHU/.project
+++ b/DHU/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FlareonFlame</name>
+	<name>DHU</name>
 	<comment></comment>
 	<projects>
 	</projects>
