--- a/DCU/.classpath
+++ b/DCU/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/shaviyomarasinghe/Downloads/jSerialComm-1.3.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shaviyomarasinghe/Downloads/json-20090211.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
