--- a/Database2/.project
+++ b/Database2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Database</name>
+	<name>Database2</name>
 	<comment></comment>
 	<projects>
 	</projects>
