--- a/DHU/.classpath
+++ b/DHU/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="M:/SYSC3010/json-20090211.jar"/>
-	<classpathentry kind="lib" path="M:/SYSC3010/sqlite-jdbc-3.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shaviyomarasinghe/Documents/GitHub/F5/DCU/jSerialComm-1.3.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shaviyomarasinghe/Documents/GitHub/F5/DCU/json-20090211.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shaviyomarasinghe/Documents/GitHub/F5/Database/sqlite-jdbc-3.21.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
